--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="title_activity_cadastro_novo">CadastroNovoActivity</string>
     <string name="title_activity_editar_produto">EditarProdutoActivity</string>
     <string name="sincronizar_produtos">Sincronizar Produtos</string>
+    <string name="fechar_a_compra">Fechar a Compra</string>
 
 </resources>
